k8s/iss-policy-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iss-policy-service
  labels:
    app: iss-policy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iss-policy-service
  template:
    metadata:
      labels:
        app: iss-policy-service
    spec:
      containers:
      - name: iss-policy-service
        image: fpoirier2020/iss-policy-service
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: iss-policy-service
  labels:
    app: iss-policy-service
    spring-boot: "true"
spec:
  ports:
  - port: 8082
    protocol: TCP
  selector:
    app: iss-policy-service
