k8s/kafka.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: default
  labels:
    app: kafka
spec:
  clusterIP: None
  ports:
  - port: 9092
    name: server
  selector:
    app: kafka
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: kafka
  namespace: default
spec:
  serviceName: kafka-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - kafka
            topologyKey: "kubernetes.io/hostname"
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - zk
              topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 300
      volumes:
      - name: kafka-pv-storage
        persistentVolumeClaim:
          claimName: kafka-pv-claim
      containers:
        - name: k8skafka
          imagePullPolicy: Always
          image: confluentinc/cp-kafka:latest
          ports:
            - containerPort: 9092
              name: server
          command:
            - sh
            - -c
            - "KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka-${HOSTNAME##*-}.kafka-svc.default.svc.cluster.local:9092 KAFKA_BROKER_ID=${HOSTNAME##*-} /etc/confluent/docker/run"
          volumeMounts:
          - name: kafka-pv-storage
            mountPath: /var/lib/kafka
