k8s/mongodb.yaml
apiVersion: v1
metadata:
  name: mongodb-config
  namespace: default
data:
  database-name: admin
  database-password: admin
  database-user: c1oudc1w
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pv-claim    
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-storage
          mountPath: /var/lib/mongodb/data              
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    protocol: TCP
  selector:
    app: mongodb
